# PocketFlow-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  database_guide.sh  release_check.sh  test_redis.sh
examples/: 01_hello_world.rs  02_storage_showcase.rs  03_node_showcase.rs  04_flow_builder.rs  05_conditional_routes.rs  07_llm_chat.rs  10_workflow_orchestration.rs  README.md  README_redis.md  api_request.rs  api_request_enhanced.rs  basic_usage.rs  composition_performance.rs  composition_showcase.rs  database_storage.rs  enhanced_actions.rs  flow_system.rs  inheritance_vs_composition.rs  mysql_storage.rs  nested_flows.rs  node_system.rs  postgres_storage.rs  qa_flow.rs  redis_storage.rs  simple_chatbot.rs  simple_performance.rs  streaming_chat.rs  streaming_comparison.rs  tools_showcase.rs  typewriter_chat.rs
examples/chat/: README.md  main.rs
examples/qa_flow/: main.rs
examples/utils/: mod.rs
src/: action.rs  async_shared_store.rs  flow.rs  lib.rs  shared_store.rs  storage.rs
src/composition/: builder.rs  mod.rs  node.rs
src/composition/behaviors/: data.rs  llm.rs  logging.rs  mod.rs
src/core/: batch.rs  communication.rs  flow.rs  mod.rs  node.rs  type.rs
src/node/: builtin.rs  mod.rs  tests.rs
src/shared_store/: async_store.rs  mod.rs  sync.rs
src/storage/: file.rs  memory.rs  mod.rs  redis.rs
src/storage/database/: mod.rs
src/storage/database/entities/: key_value_store.rs
src/storage/database/migration/: m20250531_000001_create_key_value_store.rs  mod.rs
src/tools/: configuration.rs  debugging.rs  mod.rs  monitoring.rs  persistence.rs  visualization.rs
tests/: test_api_request.rs  test_batch.rs  test_communication.rs  test_flow.rs  test_nested_flows.rs  test_node.rs  test_streaming.rs
utils/: Cargo.toml
utils/src/: call_llm.rs  call_llm_async.rs  lib.rs  stream_llm.rs
