[package]
name = "pocketflow-rs"
version = "0.1.0"
edition = "2024"
authors = ["echozyr2001 <echo.zyr.2001@gmail.com>"]
description = "A Rust implementation of PocketFlow framework"
license = "MIT"
keywords = ["llm", "ai", "framework", "workflow"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-openai = "0.20"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "enhanced_actions"
path = "examples/enhanced_actions.rs"

[[example]]
name = "node_system"
path = "examples/node_system.rs"

[[example]]
name = "flow_system"
path = "examples/flow_system.rs"

[[example]]
name = "nested_flows"
path = "examples/nested_flows.rs"

[[example]]
name = "api_request"
path = "examples/api_request.rs"
