[package]
name = "pocketflow-rs"
version = "0.1.0"
edition = "2024"
authors = ["echozyr2001 <echo.zyr.2001@gmail.com>"]
description = "A Rust implementation of PocketFlow framework"
license = "MIT"
keywords = ["llm", "ai", "framework", "workflow"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-openai = "0.20"
reqwest = { version = "0.11", features = ["json"] }

redis = { version = "0.31", optional = true }

# Optional database support with SeaORM
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
], optional = true }
sea-orm-migration = { version = "1.1.0", optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
redis = ["dep:redis"]
database = ["dep:sea-orm", "dep:sea-orm-migration"]
database-sqlite = ["database"]
database-postgres = ["database"]
database-mysql = ["database"]
async = []

[[example]]
name = "database_storage"
path = "examples/database_storage.rs"
required-features = ["database"]

[[example]]
name = "postgres_storage"
path = "examples/postgres_storage.rs"
required-features = ["database-postgres"]

[[example]]
name = "mysql_storage"
path = "examples/mysql_storage.rs"
required-features = ["database-mysql"]

[[example]]
name = "redis_storage"
path = "examples/redis_storage.rs"
required-features = ["redis"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "enhanced_actions"
path = "examples/enhanced_actions.rs"

[[example]]
name = "node_system"
path = "examples/node_system.rs"

[[example]]
name = "flow_system"
path = "examples/flow_system.rs"

[[example]]
name = "nested_flows"
path = "examples/nested_flows.rs"

[[example]]
name = "api_request"
path = "examples/api_request.rs"
